--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,11 @@
               <fa-icon [icon]="['fas','bars']"></fa-icon>
           </button>
           <!-- Navbar -->
+          <!-- <div class="NavBar-HamburgerIcon">
+            <span class="NavBar-HamburgerIconLine"></span>
+            <span class="NavBar-HamburgerIconLine"></span>
+            <span class="NavBar-HamburgerIconLine"></span>
+          </div> -->
           <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive" [class.show]="menuShow">
               <ul class="navbar-nav">
                   <li class="nav-item">
