--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -22,20 +22,24 @@
         }
         h2{
             font-size: 40px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             line-height: 50px;
             margin-bottom: 50px;
         }
         h3{
             font-size: 24px;
-            font-weight: 300;
-            line-height: 60px;
-            margin-bottom: 10px;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
+            // line-height: 60px;
+            margin-bottom: 20px;
+            margin-top: 20px;
         }
         p{
             line-height: 20px;
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             color: rgba(0,0,0,0.69);
             text-align: justify;
         }
@@ -48,7 +52,8 @@
     .heading{
         h3{
             font-size: 40px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             line-height: 56px;
             margin-bottom: 16px;
         }
@@ -56,7 +61,8 @@
     .description{
         p{
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             color: rgba(0,0,0,0.69);
             line-height: 20px;
             text-align: justify;
