--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -2,7 +2,7 @@
 <section class="blog-posts">
     <div class="container">
         <div class="post-title">
-            <h1>LATEST <span class="text-primary">BLOGS AND ARTICLES</span></h1>
+            <h1>Latest Blogs And Articles</h1>
         </div>
         <div class="post-excerpt" *ngFor="let post of posts">
             <div class="shadow p-3 mb-5 bg-white rounded">
