--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -22,10 +22,10 @@
       <aside>
           <ul>
             <li>
-              <a routerLink="/contact-us" routerLinkActive="active"><span>PROJECT ENQUIRE</span></a>
+              <a routerLink="/contact-us" routerLinkActive="active"><span>Project Enquire</span></a>
             </li>
             <li>
-                <a routerLink="/careers" routerLinkActive="active"><span>CAREERS</span></a>
+                <a routerLink="/careers" routerLinkActive="active"><span>Careers</span></a>
             </li>
           </ul>
       </aside>
