--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -1,14 +1,15 @@
 <section class="cater">
 <div class="container">
       <div class="row">
-            <div class="col-md-6">
-                  <h1>We cater to your needs</h1>
+            <div class="col-md-10">
+                  <h1>We cater to <br>
+                        your specific needs</h1>
             </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-1">
+            <!-- <div class="col-md-1"></div> -->
+            <!-- <div class="col-md-1">
                   <div class="v1"></div>
-            </div>
-            <div class="col-md-4">
+            </div> -->
+            <!-- <div class="col-md-4">
                   <div class="list-items">
                     <h3><span class="image1"><img src="/assets/images/cater/icon-1.svg" alt="" /></span><span class="list">DIGITAL TRANSFORMATION</span></h3>
                     <h3><span class="image2"><img src="/assets/images/cater/icon-2.svg" alt="" /></span><span class="list">PRODUCT DEVELOPMENT</span></h3>
@@ -17,8 +18,8 @@
                     <h3><span class="image5"><img src="/assets/images/cater/icon-5.svg" alt="" /></span><span class="list">ENTERPRICE APPLICATION</span></h3>
                     <h3><span class="image6"><img src="/assets/images/cater/icon-6.svg" alt="" /></span><span class="list">INFORMATION PORTALS</span></h3>
                   </div>
-            </div>
-            <div class="col-md-1"></div>
+            </div> -->
+            <!-- <div class="col-md-1"></div> -->
       </div>
 </div>
 </section>
@@ -72,8 +73,11 @@
                         <p>Our consultants can build well-crafted digital experience for the end users thereby increasing 
                         the customer footfall and retention. 
                         </p>
-                        <div class="btn">View Case Study</div>
+                        <!-- <div class="btn">View Case Study</div> -->
                   </div>
+            </div>
+            <div class="buttn">
+                  <div class="btn">View Case Study</div>
             </div>
       </div>
 </section>
@@ -95,7 +99,7 @@
                               company handles pressures from the market and how it decides to use external and internal sources 
                               of product development.
                         </p>
-                        <h2>Product Development Process</h2>
+                        <!-- <h2>Product Development Process</h2> -->
                         <div class="list">
                               <h3><img src="/assets/images/cater/path.svg" />Selecting the Target Group</h3>
                               <h3><img src="/assets/images/cater/path.svg" />Conducting Market Research</h3>
@@ -106,7 +110,7 @@
                               <h3><img src="/assets/images/cater/path.svg" />Usability Testing</h3>
                               <h3><img src="/assets/images/cater/path.svg" />Design Refinement</h3>
                         </div>
-                        <div class="btn">View Case Study</div>
+                        
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
@@ -114,6 +118,9 @@
                               <img src="/assets/images/home/img-4.png" alt="" />
                         </div>
                   </div>
+            </div>
+            <div class="buttn">
+                  <div class="btn">View Case Study</div>
             </div>
       </div>
 </section>
@@ -146,11 +153,14 @@
                         <p>With the overall road map defined we convert the drawing board ideas to realistic Business Strategy and collaborate with the 
                               Product Owners to priorities and assign timeline. Analyse the ROI and align the features for the road map ahead.
                         </p>
+                        <div class="step-image">
+                              <img src="/assets/images/projects/skill-development/web-view.png">
+                        </div>
                   </div>
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>Design Sprints</h2>
+                        <h5>Design Sprints</h5>
                         <p>Design Sprints have been used by product leaders in companies like Uber, Slack, Google and Twitter 
                               to solve problems and build better products. It is an ultimate tool for 
                         </p>
@@ -161,25 +171,28 @@
                         </div>
                         <p>with as little investment as possible in a the actual market.</p>
 
-                        <p>Design Sprints brings together cross-functional team to explore ideas from 360 degree with the 
+                        <!-- <p>Design Sprints brings together cross-functional team to explore ideas from 360 degree with the 
                               core idea of “Faster to market”. We make sure the MVP hits the market with the best of experience 
                               and iterate based on real customer feedback. The successive sprints are planned help in increasing 
                               the customer base and also in retaining existing customer.
-                        </p>
-                        <div class="list">
+                        </p> -->
+                        <!-- <div class="list">
                               <h3><img src="/assets/images/cater/path.svg" />Colloborate</h3>
                               <h3><img src="/assets/images/cater/path.svg" />Innovate</h3> 
                               <h3><img src="/assets/images/cater/path.svg" />Accelerate</h3>
-                        </div>
+                        </div> -->
                         
-                        <div class="btn">View Case Study</div>
+                        <!-- <div class="btn">View Case Study</div> -->
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
-                        <div class="step-image">
+                        <!-- <div class="step-image">
                               <img src="/assets/images/projects/skill-development/web-view.png">
-                        </div>
+                        </div> -->
                   </div>
+            </div>
+            <div class="buttn">
+                  <div class="btn">View Case Study</div>
             </div>
       </div>
 </section>
@@ -342,7 +355,7 @@
             </div>
             <div class="row bttn">
                   <div class="col-md-12">
-                        <div class="btn">Know More</div>
+                        <div class="btn" routerLink="/services/user-experience">Know More</div>
                   </div>
             </div>
       </div>
