--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -122,35 +122,35 @@
           <div class="col-md-4">
               <div class="service">
                 <div class="service-icon">
-                    <img src="/assets/images/services/icons/one.svg" alt="User Experience"/>
+                    <img src="/assets/images/home/icon-11.svg" alt="User Experience"/>
                 </div>
                 <h4>DIGITAL TRANSFORMATION</h4>
-                <p>We help clients transform their legacy system by reimagining their process to embrace continuous 
+               <!--  <p>We help clients transform their legacy system by reimagining their process to embrace continuous 
                   improvement and innovation to elevate customer experience.
-                </p>
+                </p> -->
                 <!-- <a class="bttn">Show More</a> -->
               </div>
           </div>
           <div class="col-md-4">
             <div class="service">
                 <div class="service-icon">
-                  <img src="/assets/images/services/icons/two.svg" alt="Interface Design"/>
+                  <img src="/assets/images/home/icon-66.svg" alt="Interface Design"/>
                 </div>
-                <h4>PRODUCT DEVELOPMENT</h4>
-                <p>We help to bring a product live beginning from ideation to market launch. Our consultants can work 
-                  as a true extension of internal business or development team to bring the product live.</p>
+                 <h4>PRODUCT DEVELOPMENT</h4>
+               <!-- <p>We help to bring a product live beginning from ideation to market launch. Our consultants can work 
+                  as a true extension of internal business or development team to bring the product live.</p> -->
                 <!-- <a class="bttn">Show More</a> -->
             </div>
         </div>
         <div class="col-md-4">
           <div class="service">
             <div class="service-icon">
-              <img src="/assets/images/services/icons/three.svg" alt="UI Development" />
+              <img src="/assets/images/home/icon-55.svg" alt="UI Development" />
             </div>
-            <h4>START-UPS</h4>
-            <p>We've been there and we exactly know the struggles and what it takes to build a product from the scratch. 
+           <h4>START-UPS</h4>
+            <!--  <p>We've been there and we exactly know the struggles and what it takes to build a product from the scratch. 
               We have the expertise to validate your ideas with the right process and to bring the right solutions for 
-              your target customers and ensure a successful launch.</p>
+              your target customers and ensure a successful launch.</p> -->
             <!-- <a class="bttn">Show More</a> -->
           </div>
         </div>
@@ -159,36 +159,36 @@
            <div class="col-md-4">
                 <div class="service">
                   <div class="service-icon">
-                    <img src="/assets/images/services/icons/four.svg" alt="End-to-End Development"/>
+                    <img src="/assets/images/home/icon-44.svg" alt="End-to-End Development"/>
                   </div>
                   <h4>MOBILE APPS</h4>
-                  <p>With the need for constant updates and customer interaction the demand for mobile apps have increased multifold. 
+                  <!-- <p>With the need for constant updates and customer interaction the demand for mobile apps have increased multifold. 
                     Aligning with the Native Ecosystem is the key to design for Android & iOS which helps in easier adaptability. 
-                    Our designers can churn the right features and engagement with the best of customer experience.</p>
+                    Our designers can churn the right features and engagement with the best of customer experience.</p> -->
                   <!-- <a class="bttn">Show More</a> -->
                 </div>
           </div>
           <div class="col-md-4">
             <div class="service">
               <div class="service-icon">
-                <img src="/assets/images/services/icons/five.svg" alt="Usablity Testing"/>
+                <img src="/assets/images/home/icon-22.svg" alt="Usablity Testing"/>
               </div>
               <h4>ENTERPRISE APPLICATIONS</h4>
-              <p>Its a huge decision when it comes to Enterprise Application Revamp. They can be complex and interwoven with multiple other systems. 
+              <!-- <p>Its a huge decision when it comes to Enterprise Application Revamp. They can be complex and interwoven with multiple other systems. 
                 We exactly know how to align the customer demand and the customer experience and build a scalable, component based mission 
                 critical applications that form the back-bone of the business.
-              </p>
+              </p> -->
               <!-- <a class="bttn">Show More</a> -->
             </div>
       </div>
           <div class="col-md-4 redirect">
               <div class="service">
                 <div class="service-icon">
-                  <img src="/assets/images/services/icons/six.svg" alt="Training"/>
+                  <img src="/assets/images/home/icon-33.svg" alt="Training"/>
                 </div>
                 <h4>INFORMATION PORTALS</h4>
-                <p>Build the face of your business that speaks of the product or service offered and acts as the 
-                  gateway for your business transactions. We focus on customer engagement and conversion.</p>
+                <!-- <p>Build the face of your business that speaks of the product or service offered and acts as the 
+                  gateway for your business transactions. We focus on customer engagement and conversion.</p> -->
                 <!-- <a class="bttn">Show More</a> -->
               </div>
           </div>
