--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -8,12 +8,14 @@
 }
 h2{
     font-size: 50px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
     margin-bottom: 30px;
 }
 p{
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     font-size: 20px;
     text-align: justify;
 }
@@ -53,7 +55,8 @@ p{
     opacity:0;
     color: white;
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     padding: 10px;
     text-align: left;
 }
@@ -63,12 +66,14 @@ p{
 h4{
     color: #FFFFFF;
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
 }
 h6{
     color: #FFFFFF;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
 }
 a{
     color: #fff;
@@ -83,7 +88,8 @@ a{
     }
     h2{
         font-size: 30px;
-        font-weight: 100;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: left;
         margin-bottom: 10px;
     }
