--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -62,7 +62,7 @@
     <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>BUSINESS UNDERSTANDING</h5>
+                    <h5>Business Understanding</h5>
                     <p>When it comes to selecting a platform it can be challenging, since that defines how the product can or cannot expand in future without technical boundaries. 
                         We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
                 </div>
@@ -80,31 +80,41 @@
     <div class="container">
         <div class="row">
            <div class="col-12">
-           <h5>PLATFORM EXPERTISE</h5>
+           <h5>Platform Expertise</h5>
            <!-- <p></p> -->
            </div>
        </div>
         <div class="row">
             <ul class="list-icons">
                 <li>
+                    <div class="hover">
                     <fa-icon [icon]="['fas','desktop']"></fa-icon>
                         <p>Websites</p>
+                    </div>
                 </li>
                 <li>
+                    <div class="hover">
                         <fa-icon [icon]="['fas','mobile-alt']"></fa-icon>
                         <p>Hybrid Mobile Apps</p>
+                    </div>
                 </li>
                 <li>
+                    <div class="hover">
                         <fa-icon [icon]="['fab','android']"></fa-icon>
                         <p>Android</p>
+                    </div>
                 </li>
                 <li>
+                    <div class="hover">
                         <fa-icon [icon]="['fab','windows']"></fa-icon>
                         <p>Windows</p>
+                    </div>
                 </li>
                 <li>
+                    <div class="hover">
                        <fa-icon [icon]="['fab','apple']"></fa-icon>
                         <p>iOS</p>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -115,7 +125,7 @@
     <div class="container">
         <div class="row">
           <div class="col-12">
-           <h5>LANGUAGES & FRAMEWORK</h5>
+           <h5>Languages & Framework</h5>
           <p>We choose the right framework to suite the business needs in terms: ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system.</p>
         </div>
         </div>
@@ -155,7 +165,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5 m-first">
-                <h5>CODES MANAGEMENT</h5>
+                <h5>Codes Management</h5>
                 <p>We manage the code in Git repository with version control to allow multiple teams 
                     to colloborate in a distributed environment.</p>
             </div>
@@ -168,7 +178,7 @@
         </div>
         <div class="row">
             <div class="col-md-5 m-first">
-                <h5>TESTING & IMPLEMENTATION</h5>
+                <h5>Testing & Implementation</h5>
                 <p>We never settle for anything less than best, we iterate with the business and 
                     end-users to refine the interface periodically. 
                     With focus on cross-platform and cross-browser testing to achieve the best results.</p>
@@ -185,7 +195,7 @@
 
 <div class="service-step4">
     <div class="step-heading">
-        <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+        <h4>Our  Solutions  Are  Helping  Audience</h4>
         <!-- <div class="step-image">
             <img src="/assets/images/sample/line.svg" />
           </div> -->
@@ -201,7 +211,7 @@
            </div>
            <div class="col-md-8">
                <div class="text">
-               <h5>APP DEVELOPMENT</h5>
+               <h5>App Development</h5>
                <p>A community portal for Skill Development providing end-to-end solution 
                    for continious learning and collaboration. </p>
                <a routerLink="/projects/app-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
@@ -216,7 +226,7 @@
 <div class="services">
     <div class="container">
         <div class="services-heading">
-            <h5>OTHER SERVICES</h5>
+            <h5>Other Services</h5>
         </div>
         <div class="service-body">
             <div class="row">
@@ -226,8 +236,8 @@
                           <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                       </div>
                       <h4>USER EXPERIENCE</h4>
-                      <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                      <a class="btn">Show More</a>
+                      <!-- <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p> -->
+                      <!-- <a class="btn">Show More</a> -->
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -236,8 +246,8 @@
                         <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                       </div>
                       <h4>INTERFACE DESIGN</h4>
-                      <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
-                      <a class="btn">Show More</a>
+                      <!-- <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p> -->
+                      <!-- <a class="btn">Show More</a> -->
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -246,8 +256,8 @@
                           <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
-                        <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
-                        <a class="btn">Show More</a>
+                        <!-- <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p> -->
+                        <!-- <a class="btn">Show More</a> -->
                       </div>
                 </div>
             </div>
