--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -320,7 +320,7 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-4 m-first">
-        <h5>UNDERSTANDING THE PRODUCT PROTOTYPE</h5>
+        <h5>Understanding The Product Prototype</h5>
           <!-- <span class="highlight">USER BEHAVIOUR</span> -->
         <p>We choose the right framework to suite the business needs in terms:ease of use, 
           scalability, interoperability with standard technology, adaptability with emerging 
@@ -343,7 +343,7 @@
         </div>
           <div class="col-md-1"></div>
           <div class="col-md-4 m-first">
-            <h5>UNDERSTANDING THE USER BEHAVIOUR</h5>
+            <h5>Understanding The User Behaviour</h5>
               <!-- <span class="highlight">USER BEHAVIOUR</span> -->
             <p>We choose the right framework to suite the business needs in terms:ease of use, 
               scalability, interoperability with standard technology, adaptability with emerging 
@@ -354,7 +354,7 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-4 m-first">
-          <h5>CREATING SCENARIO FOR THE USERS </h5>
+          <h5>Creating Scenario For The Users </h5>
             <!-- <span class="highlight">USER BEHAVIOUR</span> -->
           <p>We choose the right framework to suite the business needs in terms:ease of use, 
             scalability, interoperability with standard technology, adaptability with emerging 
@@ -377,7 +377,7 @@
           </div>
           <div class="col-md-1"></div>
           <div class="col-md-4 m-first">
-            <h5>REPORT</h5>
+            <h5>Report</h5>
             <p>We choose the right framework to suite the business needs in terms:ease of use, 
               scalability, interoperability with standard technology, adaptability with emerging 
               technologies and integration with back-end system</p>
@@ -389,7 +389,7 @@
 
 <div class="service-step9">
   <div class="step-heading">
-    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+    <h4>Our  Solutions  Are  Helping  Audience</h4>
     <!-- <div class="step-image">
       <img src="/assets/images/sample/line.svg" />
     </div> -->
@@ -405,7 +405,7 @@
           </div>
           <div class="col-md-8">
             <div class="text"> 
-              <h5>USABILITY TESTING FOR VEHICLE</h5>
+              <h5>Usability Testing For Vehicle</h5>
                 <p>Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually.Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually. </p>
                 <a routerLink="/projects/automobile-usability"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
               </div>
@@ -420,7 +420,7 @@
 <div class="services">
   <div class="container">
       <div class="services-heading">
-          <h5>OTHER SERVICES</h5>
+          <h5>Other Services</h5>
       </div>
       <div class="service-body">
           <div class="row">
@@ -430,8 +430,8 @@
                       <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                   </div>
                   <h4>USER EXPERIENCE</h4>
-                  <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                  <a class="btn">Show More</a>
+                  <!-- <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
+                  <a class="btn">Show More</a> -->
                 </div>
               </div>
               <div class="col-md-4">
@@ -440,8 +440,8 @@
                     <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                   </div>
                   <h4>INTERFACE DESIGN</h4>
-                  <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
-                  <a class="btn">Show More</a>
+                  <!-- <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p> -->
+                  <!-- <a class="btn">Show More</a> -->
               </div>
             </div>
             <div class="col-md-4">
@@ -450,9 +450,9 @@
                     <img src="/assets/images/home/ui-dev.svg" alt="UI Development" />
                   </div>
                   <h4>UI DEVELOPMENT</h4>
-                  <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
-                    execute it pixel perfect</p>
-                  <a class="btn">Show More</a>
+                  <!-- <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
+                    execute it pixel perfect</p> -->
+                  <!-- <a class="btn">Show More</a> -->
                 </div>
           </div>
           </div>
