--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -344,7 +344,7 @@
             </div>
             <div class="col-md-8">
                 <div class="text">
-                <h5>EVENT MANAGEMENT</h5>
+                <h5>Event Management</h5>
                 <p>The event management portal builds a network of people from the comfort of their home and enables to find venues and services for their Big Day! </p>
                 <a routerLink="/projects/event-management"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
@@ -369,9 +369,9 @@
                           <img src="/assets/images/home/ui-dev.svg" alt="UI Development" /> 
                         </div>
                         <h4>UI DEVELOPMENT</h4>
-                        <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
+                        <!-- <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect.</p>
-                        <a class="btn">Show More</a>
+                        <a class="btn">Show More</a> -->
                       </div>
                 </div>
                 <div class="col-md-4">
@@ -380,8 +380,8 @@
                           <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
-                        <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
-                        <a class="btn">Show More</a>
+                        <!-- <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
+                        <a class="btn">Show More</a> -->
                       </div>
                 </div>
                 <div class="col-md-4">
@@ -390,8 +390,8 @@
                         <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                       </div>
                       <h4>INTERFACE DESIGN</h4>
-                      <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
-                      <a class="btn">Show More</a>
+                      <!-- <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
+                      <a class="btn">Show More</a> -->
                   </div>
                 </div>
             </div>
