--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -4,13 +4,15 @@
 @import '../../../../scss/colors';
 h1{
     font-size: 50px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
     margin-bottom: 10px;
 }
 h5{
     font-size: 36px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
     margin-bottom: 10px;
 }
@@ -22,24 +24,42 @@ p{
     font-size: 14px;
     text-align: justify;
     margin-bottom: 30px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
 }
 .service{
-    p{
-        text-align: left;
-        font-weight: 300;
+    cursor: pointer;
+    // p{
+    //     text-align: left;
+    //     font-weight: 400;
+    //     font-family: 'Noto Serif SC', serif;
+    //     color: #000;
+    // }
+    h4{
+        color: #000;
+    }
+    .service-icon img{
+        width: auto;
+        height: 80px;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    .service-icon img:hover{
+        filter: none; 
+    -webkit-filter: grayscale(0);
     }
 }
 .btn{
     padding: 0;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     cursor: pointer;
 }
 
 .experience{
     margin-top: 180px;
-    margin-bottom: 100px;
+    margin-bottom:50px;
     h1{
         font-size: 64px;
         font-weight: 400;
@@ -48,7 +68,8 @@ p{
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -68,7 +89,8 @@ p{
         }
         .list{
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             margin-left: 10px;
         }
     }
@@ -79,7 +101,8 @@ p{
         }
         .list{
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             margin-left: 4px;
         }
     }
@@ -115,7 +138,8 @@ p{
     p{
         color: #797979;
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: justify;
         margin-bottom: 30px;
         margin-top: 10px;
@@ -123,7 +147,8 @@ p{
     h6{
         color: #6C6C6C;
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-bottom: 30px; 
      }
      .step-image img{
@@ -135,6 +160,12 @@ p{
         img{
             width: 80%;
             height: auto;
+            filter: #606A74; 
+            -webkit-filter: grayscale(1);
+        }
+        img:hover{
+            filter: none; 
+            -webkit-filter: grayscale(0);
         }
     }
     h5{
@@ -148,12 +179,19 @@ p{
     h6{
         color: #6C6C6C;
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-bottom: 30px;
     }
     .step-image img{
         width: 70%;
         height: auto;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    .step-image img:hover{
+        filter: none; 
+        -webkit-filter: grayscale(0);
     }
 }
    
@@ -164,7 +202,8 @@ p{
     h6{
         color: #6C6C6C;
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-bottom: 30px;
     }
     .step-image img{
@@ -219,7 +258,8 @@ p{
         }
         p{
             font-size: 13px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             text-align: justify;
             margin-top: 10px;
         }
@@ -233,7 +273,8 @@ p{
             }
             span{
                 font-size: 13px;
-                font-weight: 300;
+                font-weight: 400;
+                font-family: 'Noto Serif SC', serif;
                 margin-left: 10px;
             }
         }
