--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -62,6 +62,7 @@
         <div class="col-md-3"></div>
       </div>
       <div class="row list-icons">
+          <!-- <div class="col-md-3"></div> -->
         <div class="col-md-2">
             <img src="/assets/images/services/interface-design/icon-1.svg" alt="" />
             <p>Mood Board</p>
@@ -70,7 +71,7 @@
             <img src="/assets/images/services/interface-design/icon-2.svg" alt="" />
             <p>Colors & Typography</p>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-2">
             <img src="/assets/images/services/interface-design/icon-3.svg" alt="" />
             <p>Iconography</p>
         </div>
@@ -78,11 +79,11 @@
             <img src="/assets/images/services/interface-design/icon-4.svg" alt="" />
             <p>User Interface</p>
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-1">
             <img src="/assets/images/services/interface-design/icon-5.svg" alt="" />
             <p>Layout & Style Guide</p>
-        </div>
-        <div class="col-md-1">
+        </div> -->
+        <div class="col-md-2">
             <img src="/assets/images/services/interface-design/icon-6.svg" alt="" />
             <p>Illustrations</p>
         </div>
@@ -90,6 +91,7 @@
             <img src="/assets/images/services/interface-design/icon-7.svg" alt="" />
             <p>Branding & Logos</p>
         </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
   </section>
@@ -290,7 +292,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5><span class="highlight">Layout </span>Setup</h5>
+        <h5>Layout Setup</h5>
     </div>
         </div>
         <div class="row">
@@ -316,7 +318,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>Setup <span class="highlight">Style Guide</span></h5>
+            <h5>Setup Style Guide</h5>
         </div>
         </div>
         <div class="row">
@@ -424,7 +426,7 @@
                 <img src="/assets/images/services/interface-design/vd18.png" alt="" />
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-3">
                 <div class="step-image5 image-align5">
                     <img src="/assets/images/services/interface-design/vd19.png" alt="" />
@@ -445,7 +447,7 @@
                     <img src="/assets/images/services/interface-design/vd22.png" alt="" />
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -468,7 +470,7 @@
             </div>
             <div class="col-md-8">
                 <div class="text">
-                <h5>UX AHEAD STARTUP WEBSITE</h5>
+                <h5>UX Ahead Startup Website</h5>
                 <p>Portal for business to for Recruitment and Consulting - showcasing their services and portfolio of works.</p>
                 <a routerLink="/projects/marketing"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
@@ -493,8 +495,8 @@
                           <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                       </div>
                       <h4>USER EXPERIENCE</h4>
-                      <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                      <a class="btn">Show More</a>
+                      <!-- <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
+                      <a class="btn">Show More</a> -->
                     </div>
                   </div>
 
@@ -504,9 +506,9 @@
                           <img src="/assets/images/home/ui-dev.svg" alt="UI Development" /> 
                         </div>
                         <h4>UI DEVELOPMENT</h4>
-                        <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
+                        <!-- <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect</p>
-                        <a class="btn">Show More</a>
+                        <a class="btn">Show More</a> -->
                       </div>
                 </div>
 
@@ -516,8 +518,8 @@
                           <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
-                        <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
-                        <a class="btn">Show More</a>
+                        <!-- <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
+                        <a class="btn">Show More</a> -->
                       </div>
                 </div>
               
