--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,45 @@
     display: block;
 }
 
+.overlay { 
+    height: 0%; 
+    width: 100%; 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    background-color: #1a6e1a; 
+    overflow-y: hidden; 
+    transition: 1.0s; 
+} 
+
+.overlay-content { 
+    position: relative; 
+    top: 25%; 
+    width: 100%; 
+    text-align: center; 
+} 
+
+.overlay a { 
+    padding: 10px; 
+    text-decoration: none; 
+    font-size: 40px; 
+    color: white; 
+    display: block; 
+    transition: 0.3s; 
+} 
+
+.overlay a:hover, 
+.overlay a:focus { 
+    color: black; 
+} 
+
+.overlay .closebtn { 
+    position: absolute; 
+    top: 10px; 
+    right: 35px; 
+    font-size: 70px; 
+} 
+
 /* Header */
 header{
     //box-shadow: 0 3px 5px rgba(0,0,0,.04);
@@ -22,6 +61,32 @@ header{
             width: 200%;
         }
         //
+    }
+    .NavBar-HamburgerIcon {
+        -webkit-transition: all .25s linear;
+        transition: all .25s linear;
+        position: relative;
+        display: inline-block;
+        width: 20px;
+        height: 15px;
+        line-height: 10px;
+        cursor: pointer;
+        .NavBar-HamburgerIconLine {
+            -webkit-transition: all .12s linear;
+            transition: all .12s linear;
+            position: absolute;
+            left: 0;
+            display: block;
+            background: #000;
+            width: 100%;
+            height: 2px;
+        }
+        .NavBar-HamburgerIconLine:nth-child(2) {
+            top: 40%;
+        }
+        .NavBar-HamburgerIconLine:nth-child(3) {
+            top: 80%;
+        }
     }
     // .box{
     //     width: 80px;
