--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -4,16 +4,18 @@
 @import '../../../../scss/colors';
 h1{
     font-size: 50px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
     margin-bottom: 10px;
     line-height: 60px;
 }
 h5{
     font-size: 40px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .highlight{
     color: #60D6C9;
@@ -23,18 +25,36 @@ p{
     font-size: 14px;
     text-align: justify;
     margin-bottom: 30px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
 }
 .service{
-    p{
-        text-align: left;
-        font-weight: 300;
+    cursor: pointer;
+    // p{
+    //     text-align: left;
+    //     font-weight: 400;
+    //     font-family: 'Noto Serif SC', serif;
+    //     color: #000;
+    // }
+    h4{
+        color: #000;
+    }
+    .service-icon img{
+        width: auto;
+        height: 80px;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    .service-icon img:hover{
+        filter: none; 
+    -webkit-filter: grayscale(0);
     }
 }
 .btn{
     padding: 0;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     cursor: pointer;
 }
 // .searvice-jumbotron{
@@ -93,7 +113,7 @@ p{
 // }
 .end{
     margin-top: 180px;
-    margin-bottom: 180px;
+    margin-bottom: 140px;
     h1{
         font-size: 64px;
         text-align: center;
@@ -109,7 +129,8 @@ p{
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -122,7 +143,8 @@ p{
         // }
         span{
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             margin-left: 10px;
         }
     }
@@ -132,7 +154,8 @@ p{
     margin-bottom: 80px;
     .highlight1{
         font-size: 24px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: left;
         line-height: 20px;
     }
@@ -141,12 +164,19 @@ p{
      img{
         width: 80%;
         height: auto;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    img:hover{
+        filter: none; 
+    -webkit-filter: grayscale(0);
     }
 }
     img{
         margin-bottom: 5px;
     }
 }
+
 .service-step1{
     background-color: #272727; 
     margin-top: -15px;
@@ -174,6 +204,7 @@ p{
         }
     }
 }
+
 .service-step2{
     background-color: #F2F2F2;
     margin-top: 0px;
@@ -185,7 +216,8 @@ p{
     h3{
         color: #000000;
         font-size: 20px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -199,6 +231,7 @@ p{
         }
         p{
             text-align: center;
+            margin-top: 10px;
         }
     }
 }
@@ -209,6 +242,12 @@ p{
     .step-image img{
         width: 80%;
         height: auto;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    .step-image img:hover{
+        filter: none; 
+        -webkit-filter: grayscale(0);
     }
     .row{
         margin-bottom: 100px;
