--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -4,13 +4,15 @@
 @import '../../../../scss/colors';
 h1{
     font-size: 50px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
     margin-bottom: 10px;
 }
 h5{
     font-size: 40px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: left;
     margin-bottom: 10px;
 }
@@ -20,25 +22,43 @@ h5{
 p{
     color: #797979;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: justify;
     margin-bottom: 30px;
 }
 .service{
-    p{
-        text-align: left;
-        font-weight: 300;
+    cursor: pointer;
+    // p{
+    //     text-align: left;
+    //     font-weight: 400;
+    //     font-family: 'Noto Serif SC', serif;
+    //     color: #000;
+    // }
+    h4{
+        color: #000;
+    }
+    .service-icon img{
+        width: auto;
+        height: 80px;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    .service-icon img:hover{
+        filter: none; 
+    -webkit-filter: grayscale(0);
     }
 }
 .btn{
     padding: 0;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     cursor: pointer;
 }
 .usability{
     margin-top: 180px;
-    margin-bottom: 180px;
+    margin-bottom: 100px;
     h1{
         font-size: 64px;
         font-weight: 400;
@@ -54,7 +74,8 @@ p{
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -67,7 +88,8 @@ p{
         // }
         span{
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             margin-left: 10px;
         }
     }
@@ -78,12 +100,15 @@ p{
     background-color: #FFF7F7;
     h1{
         font-size: 40px;
-        font-family: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: center;
+        margin-bottom: 40px;
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: center;
     }
 }
@@ -99,23 +124,27 @@ img{
 }
 p{
     font-size: 14px;
-    font-family: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align: center;
     margin-top: 10px;
 }
 }
 
 .testing{
-    margin-top: 150px;
+    margin-top: 50px;
     margin-bottom: 100px;
     h1{
         font-size: 40px;
-        font-family: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-top: 100px;
+        margin-bottom: 20px;
     }
     p{
         font-size: 14px;
-        font-family: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
     }
     img{
         width: 70%;
@@ -123,7 +152,8 @@ p{
     }
     h3{
         font-size: 17px;
-        font-family: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
     }
 }
 
@@ -133,17 +163,20 @@ p{
     background-color: #FFF7F7;
     h1{
         font-size: 40px;
-        font-family: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-bottom: 40px;
     }
     h3{
         color: #6C6C6C;
         font-size: 18px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
     }
     p{
         font-size: 14px;
-        font-family: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         margin-bottom: 0;
     }
     img{
@@ -220,7 +253,8 @@ p{
 .service-step3{
     h1{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: center;
     }
     h5{
@@ -230,19 +264,27 @@ p{
     }
     h4{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: left;
         margin-bottom: 10px;
     }
     .highlight{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
         text-align: left;
         margin-bottom: 10px;
     }
     .step-image img{
         width: 80%;
         height: 200px;
+        filter: #606A74; 
+        -webkit-filter: grayscale(1);
+    }
+    .step-image img:hover{
+        filter: none; 
+        -webkit-filter: grayscale(0);
     }
     .row{
         margin-bottom: 100px;
